2005-06-03 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb, misc/style/wiki/wiki_style.rb: my plugin support
	  'n days before/after' mode.

2005-06-02 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, plugin/00default.rb: "N days before/after" navigation
	  button [EXPERIMENTAL]

2005-06-01 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, index.rb: N days mode [EXPERIMENTAL]

2005-05-29 KURODA Hiraku <hiraku at hinet.mydns.jp>
	* escape quote in TSUKKOMI.

2005-05-18  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/defaultio.rb: support CRLF.

2005-05-18 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fix typo by supporting ruby 1.9 HEAD.
	* doc/HOWTO-make-io.rd: fix about IO#transaction block parameter.

2005-05-16  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb: support ruby 1.9 HEAD.

2005-05-15  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb: support ruby 1.9 HEAD.
	* tdiary/defaultio.rb: close open file only in 'ensure'.

2005-05-05 TADA Tadashi <sho@spc.gr.jp>
	* plugin/{ja,en.zh}/00default.rb: fix wrong </h4> to </h3>.

2005-04-21  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb: invoke update_proc in showcomment mode.

2005-04-08 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, plugin/00default.rb, misc/theme_convert/theme_convert.rb:
	  remove using ERbLight. (only support ruby 1.8 or later.)
	* erb/*: delete.
	* skel/conf.rhtml, plugin/00default.rb: fix theme to 'default' in configuration mode.

2005-04-06 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/defailtio.rb: support ruby 1.9 HEAD. thanks Mineo Aoki <aamine at loveruby.net>.
	* tdiary/defailtio.rb: through NameError in restore.

2005-03-09 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: add mobile user agents; 'Vodafone' and 'MOT-'.
	  thanks Masaru Yokoi <masaru at masaru.org>
	* skel/i.update.rhtml: fix HTML tag typo. thanks Masaru Yokoi <masaru at masaru.org>

2005-01-27 zunda <zunda at freeshell.org>
	* skel/i.update.rhtml: bug fix - Kanji code converted from shift-jis to euc
	* skel/i.month.rhtml: use labels from plugin for i18n
